adding video qa tile link

--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -192,6 +192,14 @@ Learn how to easily build, test and deploy code for common microservice and cach
   />
 </div>
 
+<div class="col">
+  <RedisCard
+    title="AI Video Q&A with Redis and Langchain"
+    description="Building an AI-Powered Video Q&A Application with Redis and LangChain (OpenAI and Gemini)"
+    page="/howtos/solutions/vector/ai-qa-videos-langchain-redis-openai-google"
+  />
+</div>
+
 </div>
 
 ## Triggers and Functions
